--- a/src/u200.cfg
+++ b/src/u200.cfg
@@ -3,9 +3,9 @@ save-temps=1
 
 [connectivity]
 nk=vadd:1:vadd_1
-sp=vadd_1.in1:DDR[1]
-sp=vadd_1.in2:DDR[2]
-sp=vadd_1.out:DDR[1]
+sp=vadd_1.in1:HBM[1]
+sp=vadd_1.in2:HBM[2]
+sp=vadd_1.out:HBM[1]
 
 [profile]
 data=all:all:all
